--- a/style.css
+++ b/style.css
@@ -1,1 +1,6 @@
-
+.button-link:inline-block/* make the
+link behave like button so that padding
+works*/
+padding:10px20px/* size of botton*/
+background colour:pink/* colour of the button*/
+colour:white/* colour of text*/
